--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "lint": "eslint",
     "build": "webpack --mode production",
-    "serve": "webpack serve --mode=production --port=9000"
+    "serve": "webpack-dev-server --mode=production --port=9000"
   },
   "repository": {
     "type": "git",
@@ -20,22 +20,24 @@
   },
   "homepage": "https://github.com/yashchenkov/AdvancedJSDiploma#readme",
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "babel-jest": "^28.1.0",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.16.0",
-    "file-loader": "^6.2.0",
-    "html-loader": "^3.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "@babel/cli": "^7.10.1",
+       "@babel/core": "^7.10.2",
+       "@babel/preset-env": "^7.10.2",
+       "@webpack-cli/serve": "^1.6.1",
+       "babel-jest": "^26.0.1",
+       "babel-loader": "^8.1.0",
+       "css-loader": "^3.6.0",
+       "eslint": "^7.2.0",
+       "eslint-config-airbnb-base": "^14.2.0",
+       "eslint-plugin-import": "^2.21.2",
+       "html-loader": "^1.1.0",
+       "html-webpack-plugin": "^4.5.2",
+       "jest": "^26.0.1",
+       "mini-css-extract-plugin": "^0.9.0",
+       "url-loader": "^4.1.1",
+       "webpack": "^4.43.0",
+       "webpack-cli": "^4.4.0",
+       "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "core-js": "^3.22.7"
